# codecrafters-kafka-cpp

./: .gitignore  CMakeLists.txt  README.md
include/kafka/: utils.hpp
include/kafka/message/: abstract.hpp  api_versions.hpp  describe_topic_partitions.hpp  fetch.hpp  headers.hpp  messages.hpp
include/kafka/metadata/: cluster_metadata.hpp
include/kafka/network/: client.hpp  server.hpp
include/kafka/protocol/: constants.hpp  file_descriptor.hpp  ireadable.hpp  iwritable.hpp  readable_buffer.hpp  types.hpp  uuid.hpp  writable_buffer.hpp
src/: main.cpp
src/kafka/handlers/: api_versions_request_handler.cpp  api_versions_request_handler.hpp  describe_topic_partitions_request_handler.cpp  describe_topic_partitions_request_handler.hpp  fetch_request_handler.cpp  fetch_request_handler.hpp  request_handler.cpp  request_handler.hpp
src/kafka/metadata/: cluster_metadata.cpp  cluster_metadata.hpp  record.hpp  record_batch.cpp  record_batch.hpp  record_header.hpp
src/kafka/network/: client_connection.cpp  client_connection.hpp  server.cpp  server.hpp
src/kafka/protocol/: api_key.cpp  api_key.hpp  error_code.cpp  error_code.hpp  readable.cpp  readable.hpp  uuid.hpp  writable.cpp  writable.hpp
src/kafka/requests/: api_versions_request.hpp  api_versions_response.hpp  describe_topic_partitions_request.hpp  describe_topic_partitions_response.hpp  fetch_request.hpp  fetch_response.hpp  request.cpp  request.hpp  request_header.hpp  (+2 more)
src/metadata/: cluster_metadata.cpp
src/network/: server.cpp
src/protocol/: file_descriptor.cpp  ireadable.cpp  iwritable.cpp
(+4 files in other folders)
